samples/_failures_safe/1761129306_8291aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59383621.c: In function ‘main’:
./samples/SAFE/__tmp_59383621.c:163:26: error: ‘decomp’ undeclared (first use in this function)
  163 |     if (!buffer_reserve(&decomp
      |                          ^~~~~~
./samples/SAFE/__tmp_59383621.c:163:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_59383621.c:163:32: error: expected ‘)’ at end of input
  163 |     if (!buffer_reserve(&decomp
      |                        ~       ^
      |                                )
./samples/SAFE/__tmp_59383621.c:163:10: error: too few arguments to function ‘buffer_reserve’
  163 |     if (!buffer_reserve(&decomp
      |          ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_59383621.c:23:5: note: declared here
   23 | int buffer_reserve(Buffer* buf, size_t needed) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_59383621.c:163:5: error: expected declaration or statement at end of input
  163 |     if (!buffer_reserve(&decomp
      |     ^~
